--- a/frontend/src/pages/css/LandingPage.css
+++ b/frontend/src/pages/css/LandingPage.css
@@ -1,38 +1,86 @@
 /* Landing Page Styles */
-.container {
-    background-color: #fff;
-    padding: 2rem;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    width: 90%;
-    max-width: 800px;
-    margin: 2rem auto;
-    text-align: center;
-  }
+.landing-container {
+  background-color: #fff;
+  padding: 2rem;
+  border-radius: 20px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  width: 90%;
+  max-width: 1000px;
+  margin: 2rem auto;
+  text-align: center;
+}
+.content{
   
-  h2 {
-    margin-bottom: 1.5rem;
-    color: #333;
-  }
-  
-  .content {
-    text-align: left;
-  }
-  
-  h3 {
-    margin-top: 1.5rem;
-    color: #333;
-  }
-  
-  p {
-    color: #555;
-    font-size: 1.1rem;
-    line-height: 1.6;
-  }
-  
-  ul {
-    color: #555;
-    font-size: 1.1rem;
-    line-height: 1.6;
-    margin-left: 1rem;
-  }
+}
+
+.landing-title {
+  margin-bottom: 1.5rem;
+  color: #333;
+}
+
+.landing-content {
+  text-align: left;
+}
+
+.landing-subtitle {
+  margin-top: 1.5rem;
+  color: #333;
+}
+
+.landing-subheading {
+  margin-top: 1rem;
+  color: #555;
+}
+
+.landing-user {
+  color: #555;
+  font-size: 1.1rem;
+  line-height: 1.6;
+}
+
+.landing-list {
+  color: #555;
+  font-size: 1.1rem;
+  line-height: 1.6;
+  margin-left: 1rem;
+}
+
+.landing-header-image {
+  width: 100%;
+  height: auto;
+  margin-bottom: 20px;
+}
+
+.landing-cards-container {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 2rem;
+}
+
+.landing-card {
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  width: 30%;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  text-align: left;
+}
+
+.landing-card img {
+  width: 100%;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+}
+
+.landing-card-content {
+  padding: 1rem;
+}
+
+.landing-read-more-link {
+  color: #007bff;
+  text-decoration: none;
+}
+
+.landing-read-more-link:hover {
+  text-decoration: underline;
+}
