--- a/frontend/src/pages/css/Navbar.css
+++ b/frontend/src/pages/css/Navbar.css
@@ -2,7 +2,7 @@
 .navbar {
   position: sticky;
   top: 0;
-  background-color: #c2a245;
+  background-color: #000000;
   padding: 0.5rem;
   color: #fff;
   display: flex;
