--- a/frontend/src/pages/css/RegistrationPage.css
+++ b/frontend/src/pages/css/RegistrationPage.css
@@ -1,11 +1,46 @@
-/* RegistrationPage.css */
+/* Ensure full height and margin removal for html and body */
+html, body {
+  height: 100%;
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background: url('p01.jpg') no-repeat center center fixed;
+  background-size: cover;
+}
+
 .container {
-  max-width: 500px;
-  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
+  background-color: rgba(247, 233, 233, 0.912); /* Add a dark overlay */
   padding: 2rem;
-  background-color: #f9f9f9;
+  max-width: 1000px;
+  margin: 0 auto;
+  border-radius: 3%;
+}
+
+.form-container {
+  flex: 1;
+  padding: 2rem;
+  background-color: #fff;
   border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 10px rgba(204, 193, 193, 0.1);
+  margin-right: 2rem;
+  max-width: 450px;
+}
+
+.image-container {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 450px;
+}
+
+.image-container img {
+  max-width: 100%;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 h2 {
@@ -22,6 +57,7 @@ h2 {
 
 .form-group {
   margin-bottom: 1rem;
+  width: 90%;
 }
 
 label {
@@ -34,13 +70,18 @@ label {
 input {
   width: 100%;
   padding: 0.75rem;
-  border: 1px solid #ddd;
+  border: 2px solid #ddd;
   border-radius: 4px;
   font-size: 1rem;
 }
 
 input::placeholder {
   color: #aaa;
+}
+
+input:focus {
+  border-color: #007bff;
+  outline: none;
 }
 
 .btn {
@@ -53,10 +94,12 @@ input::placeholder {
   font-size: 1rem;
   cursor: pointer;
   margin-top: 1rem;
+  transition: background-color 0.3s ease, transform 0.2s;
 }
 
 .btn:hover {
   background-color: #0056b3;
+  transform: scale(1.02);
 }
 
 p {
@@ -68,6 +111,7 @@ p {
 p a {
   color: #007bff;
   text-decoration: none;
+  font-weight: bold;
 }
 
 p a:hover {
