--- a/frontend/src/pages/css/HomePage.css
+++ b/frontend/src/pages/css/HomePage.css
@@ -1,22 +1,21 @@
-/* Home Page Styles */
+/* src/pages/css/HomePage.css */
 .home-container {
-  padding: 8rem;
+  padding: 2rem;
   text-align: center;
-  width: 90%;
-
+  width: 95%;
 }
 
 .main-banner {
-  width: 120%;
+  width: 100%; /* Adjust width to fit the container */
   margin: 0 auto 2rem;
-  /* display: block; */
+  display: block;
 }
 
 .cards-heading {
   font-size: 2rem;
   font-weight: bold;
   margin-bottom: 1.5rem;
-  color: #333;
+  color: #f1ebeb;
 }
 
 .cards-container {
@@ -37,13 +36,12 @@
   padding: 1rem;
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  height: 0%;
   width: 30%;
   text-align: left;
 }
 
 .card img {
-  width: 100%;
+  width: 95%;
   height: 350px; /* Fixed height for all images */
   object-fit: cover; /* Ensures the images cover the given height and width */
   border-radius: 8px;
@@ -78,16 +76,18 @@
   display: flex;
   justify-content: space-around;
   margin-top: 2rem;
+  color: #ddd;
 }
 
 .info-column {
   width: 30%;
   text-align: left;
+  color: #ddd;
 }
 
 .info-column h4 {
   margin-bottom: 1rem;
-  color: #333;
+  color: #fbfbfb;
 }
 
 .info-column ul {
@@ -100,7 +100,7 @@
 }
 
 .info-column ul li a {
-  color: #007bff;
+  color: #f4f6f7;
   text-decoration: none;
 }
 
@@ -122,7 +122,7 @@ footer {
   margin-top: 2rem;
   padding: 1rem;
   background-color: #f1f1f1;
-  color: #555;
+  color: #f8f2f2;
   border-top: 1px solid #ddd;
 }
 
@@ -134,50 +134,3 @@ footer a {
 footer a:hover {
   text-decoration: underline;
 }
-/* src/pages/css/HomePage.css */
-.homepage {
-  display: flex;
-}
-
-.main-content {
-  margin-left: 250px; /* Same as the sidebar width */
-  width: calc(100% - 250px); /* Adjust width to account for the sidebar */
-}
-
-.home-container {
-  padding: 2rem;
-  text-align: center;
-}
-
-.main-banner {
-  width: 80%;
-  margin: 0 auto 2rem;
-  display: block;
-}
-
-.cards-heading {
-  font-size: 2rem;
-  font-weight: bold;
-  margin-bottom: 1.5rem;
-  color: #333;
-}
-
-.cards-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.card-row {
-  display: flex;
-  justify-content: space-around;
-  width: 100%;
-  margin-bottom: 2rem;
-}
-
-/* .card {
-  background-color: #fff;
-  padding: 1rem;
-  border-radius: 8px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  height: 10%; */
