--- a/frontend/src/pages/css/Navbar.css
+++ b/frontend/src/pages/css/Navbar.css
@@ -1,4 +1,4 @@
-/* src/pages/css/Navbar.css */
+/* Navbar Styles */
 .navbar {
   position: sticky;
   top: 0;
@@ -9,7 +9,72 @@
   justify-content: space-between;
   align-items: center;
   z-index: 1000;
- 
+}
+
+.navbar-menu {
+  display: flex;
+  align-items: center;
+}
+
+.menu-button {
+  background: none;
+  border: none;
+  color: white;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: -250px; /* initially hidden */
+  width: 250px;
+  height: 100%;
+  background-color: #111;
+  color: #fff;
+  transition: left 0.3s;
+  padding-top: 60px;
+  z-index: 1001;
+}
+
+.sidebar.open {
+  left: 0; /* show the sidebar */
+}
+
+.sidebar ul {
+  list-style: none;
+  padding: 0;
+}
+
+.sidebar li {
+  padding: 8px;
+  text-align: center;
+}
+
+.sidebar a {
+  color: white;
+  text-decoration: none;
+  display: block;
+}
+
+.sidebar a:hover {
+  background-color: #575757;
+}
+
+.close-button {
+  position: absolute;
+  top: 10px;
+  right: 25px;
+  font-size: 36px;
+  background: none;
+  border: none;
+  color: white;
+  cursor: pointer;
+}
+
+.navbar-links {
+  display: flex;
+  align-items: center;
 }
 
 .navbar-links ul {
