--- a/frontend/src/pages/css/RegistrationPage.css
+++ b/frontend/src/pages/css/RegistrationPage.css
@@ -14,7 +14,7 @@ html, body {
   height: 80vh;
   background-color: rgba(247, 233, 233, 0.912); /* Add a dark overlay */
   padding: 2rem;
-  max-width: 1000px;
+  max-width: 850px;
   margin: 0 auto;
   border-radius: 3%;
 }
@@ -37,8 +37,9 @@ html, body {
   max-width: 450px;
 }
 
+
 .image-container img {
-  max-width: 100%;
+  max-width: 50vh;
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
