--- a/frontend/src/pages/css/OrderPage.css
+++ b/frontend/src/pages/css/OrderPage.css
@@ -1,45 +1,63 @@
 .order-page {
-    margin-left: 320px; /* Slightly reduced margin to move content to the left */
-    padding: 2rem;
-    background: rgba(255, 255, 255, 0.8); /* Slight transparency to distinguish from background */
-    min-height: 100vh;
-    width: calc( 120px -90% ); /* Adjust width to fit the new margin */
-  }
-  
-  .orders-container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 2rem; /* Adjust gap as needed */
-  }
-  
-  .order-item {
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-    width: calc(33.333% - 2rem);
-    margin-bottom: 2rem;
-  }
-  
-  .order-image {
-    width: 100%;
-    height: 300px;
-    object-fit: cover;
-  }
-  
-  .order-details {
-    padding: 1rem;
-    text-align: center;
-  }
-  
-  .order-details h2 {
-    margin: 0.5rem 0;
-    font-size: 1.5rem;
-  }
-  
-  .order-details p {
-    color: #007bff;
-    font-size: 1.2rem;
-    font-weight: bold;
-  }
-  
+  margin-left: 320px; /* Slightly reduced margin to move content to the left */
+  padding: 2rem;
+  background: rgba(255, 255, 255, 0.8); /* Slight transparency to distinguish from background */
+  min-height: 100vh;
+  width: calc(120px - 90%); /* Adjust width to fit the new margin */
+}
+
+.orders-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem; /* Adjust gap as needed */
+}
+
+.order-item {
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  width: calc(33.333% - 2rem);
+  margin-bottom: 2rem;
+}
+
+.order-image {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+
+.order-details {
+  padding: 1rem;
+  text-align: center;
+}
+
+.order-details h2 {
+  margin: 0.5rem 0;
+  font-size: 1.5rem;
+}
+
+/* Styling for the price */
+.order-details .price {
+  color: #007bff; /* Blue color for the price */
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+/* Styling for size and duration */
+.order-details .size-duration {
+  color: black;
+  margin: 5px 0;
+  font-size: 1rem;
+  font-weight: normal;
+}
+/* .filter-container {
+  display: flex;
+  gap: 1rem;
+  margin-bottom: 2rem;
+}
+
+.filter-container select {
+  padding: 0.5rem;
+  font-size: 1rem;
+} */
